# bmstu--iu8--python

./: .buildinfo  .gitignore  README.md  Zhukova_Mariya.html  genindex.html  index.html  melnikova.html  modules.html  my_example.html  nikulina.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  s  search.html  searchindex.js  students_folder.Nikulina.html  students_folder.Nikulina.lab2.html  students_folder.Zhukova_Mariya.html  students_folder.Zhukova_Mariya.lab2.html  students_folder.Zotov_folder.html  students_folder.Zotov_folder.lab_2.html  students_folder.html  students_folder.savandr.html  students_folder.savandr.lab_2.html  students_folder.zemliakov_alexey.html  students_folder.zemliakov_alexey.lab_2.html  tox.ini  zemliakov.html
.doctrees/: Zhukova_Mariya.doctree  environment.pickle  index.doctree  melnikova.doctree  modules.doctree  my_example.doctree  nikulina.doctree  students_folder.Nikulina.doctree  students_folder.Nikulina.lab2.doctree  students_folder.Zhukova_Mariya.doctree  students_folder.Zhukova_Mariya.lab2.doctree  students_folder.Zotov_folder.doctree  students_folder.Zotov_folder.lab_2.doctree  students_folder.doctree  students_folder.savandr.doctree  students_folder.savandr.lab_2.doctree  students_folder.zemliakov_alexey.doctree  students_folder.zemliakov_alexey.lab_2.doctree  zemliakov.doctree
.github/workflows/: bgv-lab3.yaml  flake8.yml  lab3.yaml  maa-lab3.yml  melnikova_lab3.yml  nze-lab3.yaml  python-app.yml  sae-lab3.yml  sphinx.yml  zaa-lab3.yml  zhukova-lab3.yml  zmv-lab1-only.yml
_modules/: index.html
_sources/: modules.rst.txt  my_example.rst.txt  students_folder.Zhukova_Mariya.rst.txt  students_folder.rst.txt  students_folder.savandr.lab_2.rst.txt  students_folder.savandr.rst.txt  students_folder.zemliakov_alexey.lab_2.rst.txt  students_folder.zemliakov_alexey.rst.txt  zemliakov.rst.txt
bmstu_iu8_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/_build/doctrees/: Zhukova_Mariya.doctree  borodin.doctree  environment.pickle  index.doctree  modules.doctree  my_example.doctree  nikulina.doctree  students_folder.Borodin.LabaMore1.doctree  students_folder.Borodin.doctree  students_folder.Nikulina.doctree  students_folder.Nikulina.lab2.doctree  students_folder.Zhukova_Mariya.doctree  students_folder.Zhukova_Mariya.lab2.doctree  students_folder.Zotov_folder.doctree  students_folder.Zotov_folder.lab_2.doctree  students_folder.doctree  zemliakov.doctree  (+4 more)
docs_src/source/: Zhukova_Mariya.rst  borodin.rst  conf.py  index.rst  melnikova.rst  my_example.rst  nikulina.rst  students_folder.Borodin.rst  students_folder.Nikulina.lab2.rst  students_folder.Nikulina.rst  students_folder.Zhukova_Mariya.lab2.rst  students_folder.Zotov_folder.lab_2.rst  students_folder.Zotov_folder.rst  students_folder.rst
labs/: desc.md
materials_for_labs/: desc.md  Шаблон отчета.docx
materials_for_labs/download_python/: how_to_setup_python.md
materials_for_labs/lab1/: base_python.py  pydantic.py  typing.py
materials_for_labs/lab3/: docstring.md  sphinx.md
materials_for_labs/lab7/: docker-compose.yaml  main.py  readme.md  requirements.txt
students_folder/: desc.md  qwe.py  test.py  test_lint.py
students_folder/Borodin/: I_don't_know.py  lab_1.py
students_folder/example_student/: example.py
students_folder/melnikova/: lab1.py  lab2.py  lab_1.docx
students_folder/melnikova/lab3/: conf.py  index.rst  models.py  pyproject.toml  tox.ini
students_folder/melnikova/lab3/.github/workflows/: deploy-docs.yml  lab3.yaml  publish.yml
students_folder/melnikova/lab3/docs/source/: conf.py
students_folder/melnikova/lab3/src/your_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
students_folder/melnikova/lab3/tests/: test_main.py
students_folder/melnikova/lab3/tests_models/: test.py
students_folder/melnikova/lab3/workflows/: ci.yml  codeql.yml
students_folder/test_github_actions/: my_test.py
tests/: common_func.py  conftest.py
tests/Borodin/: test_item_spec.py  test_order_line_spec.py  test_order_spec.py  test_orders_spec.py  test_profile_spec.py  test_service_spec.py  test_user_spec.py
tests/melnikova/: test_OrderLineSpec.py  test_ProfileSpec.py  test_ServiceSpec.py  test_UserSpec.py  test_item_spec.py
(+269 files in other folders)
