[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab3"
version = "0.1.0"
description = "Лабораторная работа по автодокументации"
authors = [
    {name = "Мельникова А."}
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "pytest>=7.0.0",
    "tox>=4.0.0",
]
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
]