[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package"
version = "0.1.0"
description = "Лабораторная работа по автодокументации"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "pytest>=7.0.0",
    "tox>=4.0.0",
]